--- a/README
+++ b/README
@@ -26,6 +26,8 @@
          ---                                      ---
          ---                                      ---
 
+![screenshot](http://content.pouet.net/files/screenshots/00062/00062440.jpg)
+
          ---                                      ---
          It all started as a test to try the mrdoob's 
          frameworks three.js and frame.js and see if 
