--- a/README
+++ b/README
@@ -124,7 +124,7 @@
          ---                                      ---
 
           kile:      http://kile.stravaganza.org
-          reality3d: http://www.rgba.org/r3d/
+          reality3d: http://www.borjamorales.com
           ithaqua:   http://ithaqua.stravaganza.org
           tekno:     http://tekno.stravaganza.org
           wonder:    http://wonder.stravaganza.org
